<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_grid_size"
        android:title="@string/grid_size">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_grid_one"
                    android:title="@string/_1" />
                <item
                    android:id="@+id/menu_grid_two"
                    android:title="@string/_2" />
                <item
                    android:id="@+id/menu_grid_three"
                    android:title="@string/_3" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/sort_by">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_a_z"
                    android:title="@string/a_z" />
                <item
                    android:id="@+id/menu_sort_date_added"
                    android:title="@string/date_added" />
                <item
                    android:id="@+id/menu_sort_descending"
                    android:checkable="true"
                    android:title="@string/descending" />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings" />
    </group>

</menu>
